--- a/hw1/index.html
+++ b/hw1/index.html
@@ -87,7 +87,7 @@
   А хто борець, той здобуває світ.
 </pre>
 
-<a href="https://papsanly.github.io/">Посилання на живу сторінку</a>
+<a href="https://papsanly.github.io/WBF/hw1/index.html">Посилання на живу сторінку</a>
 <a href="https://www.w3schools.com/" target="_blank">Відвідайте W3Schools!</a>
 <a href="https://www.w3schools.com/html/" target="_top">HTML5 Підручник!</a>
 <a href="index.html">
