add html layout for app

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>WBF</title>
 </head>
 <body>
+<a href="app/index.html">App</a>
+<a href="cv/index.html">CV</a>
 <a href="hw1/index.html">Homework 1</a>
+<a href="report/index.html">Report</a>
 </body>
 </html>
