--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
         Enter the details of the lost item below. If someone has found it, they can contact you using the
         information you provide.
       </p>
-      <div>
+      <form>
         <div>
           <label for="item-name">
             Item name
@@ -127,7 +127,7 @@
         <button type="submit">
           Report lost item
         </button>
-      </div>
+      </form>
     </div>
   </div>
 </main>
