--- a/report/index.html
+++ b/report/index.html
@@ -23,19 +23,96 @@
   </div>
 
   <div class="lab-report">
-    <h5>Опис до схематичного зображення</h5>
-    <h5>Тема Мета Місце розташування лаб №1</h5>
-    <h5>СТРУКТУРА ДОКУМЕНТА</h5>
+    <h5>Тема: структура html-документа. вибір предметної галузі.
+      робота з посиланнями, таблицями, зображеннями, списками В
+      html-документі.</h5>
+    <h5>Мета: придбати практичні навички роботи з HTML-документом, таблицями, ,
+      зображеннями, посиланнями, списками, формами
+      Створити шаблон звітного HTML-документом для відображення
+      результатів роботи всіх лабораторних робіт.</h5>
+    <a href="../app/index.html">Лабораторна 1</a>
+    <h5>Структура документа</h5>
     <ul>
-      <li>HTML-код таблиці</li>
-      <li>HTML-код форми</li>
-      <li>HTML-код зображення</li>
+      <li>
+        HTML-код таблиці
+        <table>
+          <tr>
+            <th>Description</th>
+            <td>Blue, 128GB, pristine condition</td>
+          </tr>
+          <tr>
+            <th>Location found</th>
+            <td>Cafeteria</td>
+          </tr>
+          <tr>
+            <th>Date found</th>
+            <td>2023-08-15</td>
+          </tr>
+        </table>
+      </li>
+      <li>
+        HTML-код форми
+        <form>
+          <div>
+            <label for="item-name">
+              Item name
+            </label>
+            <input
+              id="item-name"
+              placeholder="Enter item name"
+              required
+            />
+          </div>
+          <div>
+            <label for="location-found">
+              Location found
+            </label>
+            <input
+              id="location-found"
+              placeholder="Location where you found it"
+              required
+            />
+          </div>
+          <div>
+            <label for="description">
+              Description
+            </label>
+            <textarea
+              id="description"
+              placeholder="Enter description"
+              required
+            ></textarea>
+          </div>
+          <div>
+            <label for="contact-info">
+              Contact information
+            </label>
+            <input
+              id="contact-info"
+              placeholder="Enter contact information"
+              required
+            />
+          </div>
+          <button type="submit">
+            Report lost item
+          </button>
+        </form>
+      </li>
+      <li>HTML-код зображення
+        <img
+          alt="Item Image"
+          src="../app/img/placeholder.svg"
+          width="200"
+        />
+      </li>
     </ul>
     <h5>Висновки</h5>
-  </div>
-
-  <div class="place-for-info">
-    <p>Місце виведення інформації</p>
+    <p>
+      У рамках даної лабораторної роботи я ознайомився з основами структури HTML-документа та здобув практичні навички
+      роботи з HTML-елементами, такими як таблиці, форми, зображення, посилання та списки. Робота над проєктом дозволила
+      мені краще зрозуміти, як правильно організувати інформацію на веб-сторінці, а також як ефективно використовувати
+      HTML для створення структурної і змістовної складової веб-ресурсів.
+    </p>
   </div>
 </main>
 </body>
