--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Lost & Found</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header><h1>Lost & Found Items</h1></header>
 <main>
-  <div>
+  <div class="lost-and-found">
     <h2>Lost & Found</h2>
     <label for="search">Enter keywords to search for lost items</label>
-    <div>
+    <div class="search-container">
       <input
         id="search"
         placeholder="Enter keywords"
@@ -19,10 +20,10 @@
         Search
       </button>
     </div>
-    <ul>
-      <li>
+    <ul class="items">
+      <li class="item">
         <a href="/item/1">
-          <h2>MacBook Pro 2021</h2>
+          <h3>MacBook Pro 2021</h3>
           <table>
             <tr>
               <th>Description</th>
@@ -37,19 +38,16 @@
               <td>2023-08-16</td>
             </tr>
           </table>
-          <div>
-            <div>Item Image</div>
-            <img
-              alt="Item Image"
-              src="img/placeholder.svg"
-              width="200"
-            />
-          </div>
+          <img
+            alt="Item Image"
+            src="img/placeholder.svg"
+            width="200"
+          />
         </a>
       </li>
-      <li>
+      <li class="item">
         <a href="/item/2">
-          <h2>iPhone 13</h2>
+          <h3>iPhone 13</h3>
           <table>
             <tr>
               <th>Description</th>
@@ -64,19 +62,16 @@
               <td>2023-08-15</td>
             </tr>
           </table>
-          <div>
-            <div>Item Image</div>
-            <img
-              alt="Item Image"
-              width="200"
-              src="img/placeholder.svg"
-            />
-          </div>
+          <img
+            alt="Item Image"
+            width="200"
+            src="img/placeholder.svg"
+          />
         </a>
       </li>
     </ul>
   </div>
-  <div>
+  <div class="report-lost-item">
     <h2>Report a lost item</h2>
     <div>
       <p>
