finish report lab 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="hw1/index.html">Homework 1</a>
   </li>
   <li>
-    <a href="report/index.html">Report</a>
+    <a href="report/lab1/index.html">Report</a>
   </li>
 </ul>
 </body>
