--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 <body>
 <header><h1>Lost & Found Items</h1></header>
 <main>
-  <div class="lost-and-found">
+  <section class="lost-and-found">
     <h2>Lost & Found</h2>
     <label for="search">Enter keywords to search for lost items</label>
     <div class="search-container">
@@ -70,8 +70,8 @@
         </a>
       </li>
     </ul>
-  </div>
-  <div class="report-lost-item">
+  </section>
+  <section class="report-lost-item">
     <h2>Report a lost item</h2>
     <div>
       <p>
@@ -124,7 +124,7 @@
         </button>
       </form>
     </div>
-  </div>
+  </section>
 </main>
 <footer>
   <p><small>© 2024 Lost and Found Inc. All rights reserved.</small></p>
