--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <a href="cv/index.html">CV</a>
   </li>
   <li>
-    <a href="hw1/index.html">Homework 1</a>
-  </li>
-  <li>
-    <a href="report/lab1/index.html">Report</a>
+    <a href="report/lab1/1.html">Report</a>
   </li>
 </ul>
 </body>
