--- a/report/lab3/task3/index.html
+++ b/report/lab3/task3/index.html
@@ -166,8 +166,20 @@
 <body>
 <div class="flex-col items-center justify-between gap-lg" style="max-width: 900px">
   <div class="flex-row gap-lg">
-    <div>
-      <img src="img_1.png" alt="img_1">
+    <div class="relative">
+      <img alt="img_1" src="img_1.png">
+      <div class="absolute top-0 right-0">
+        <div class="text-xsm" style="background: red; color: white; padding: 5px; text-align: center">Акция!</div>
+        <div style="align-items: end; justify-items: end"
+             class="grid rows-3 cols-2 gap-xsm bg-white text-xsm">
+          <div class="text-bold" style="grid-row: span 2; font-size: large">
+            67
+          </div>
+          <div>%</div>
+          <div class="text-bold">Минус</div>
+          <div style="grid-column: span 2">Экономия 800 грн</div>
+        </div>
+      </div>
     </div>
     <div class="flex-col gap-md">
       <h1 class="text-lg">
