finish lab 5 and 6

--- a/app/index.html
+++ b/app/index.html
@@ -21,56 +21,7 @@
         Search
       </button>
     </div>
-    <ul class="items">
-      <li class="item">
-        <a href="/item/1">
-          <h3>MacBook Pro 2021</h3>
-          <table>
-            <tr>
-              <th>Description</th>
-              <td>Space gray, 1TB SSD, 16GB RAM</td>
-            </tr>
-            <tr>
-              <th>Location found</th>
-              <td>Library</td>
-            </tr>
-            <tr>
-              <th>Date found</th>
-              <td>2023-08-16</td>
-            </tr>
-          </table>
-          <img
-            alt="Item Image"
-            src="img/placeholder.svg"
-            width="200"
-          />
-        </a>
-      </li>
-      <li class="item">
-        <a href="/item/2">
-          <h3>iPhone 13</h3>
-          <table>
-            <tr>
-              <th>Description</th>
-              <td>Blue, 128GB, pristine condition</td>
-            </tr>
-            <tr>
-              <th>Location found</th>
-              <td>Cafeteria</td>
-            </tr>
-            <tr>
-              <th>Date found</th>
-              <td>2023-08-15</td>
-            </tr>
-          </table>
-          <img
-            alt="Item Image"
-            width="200"
-            src="img/placeholder.svg"
-          />
-        </a>
-      </li>
-    </ul>
+    <ul class="items"></ul>
   </section>
   <section class="report-lost-item">
     <h2>Report a lost item</h2>
@@ -130,5 +81,6 @@
 <footer>
   <p><small>© 2024 Lost and Found Inc. All rights reserved.</small></p>
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
