--- a/report/lab6/1.html
+++ b/report/lab6/1.html
@@ -34,7 +34,7 @@
           Лабораторна робота 3
         </a>
       </li>
-      <li class="current-lab">
+      <li>
         <a href="../lab4/1.html">
           Лабораторна робота 4
         </a>
@@ -49,7 +49,7 @@
           Лабораторна робота 5.1
         </a>
       </li>
-      <li>
+      <li class="current-lab">
         <a href="../lab6/1.html">
           Лабораторна робота 6
         </a>
@@ -58,23 +58,48 @@
   </div>
   <div>
     <ul class="lab-list">
-      <li>
+      <li class="current-lab">
         <a href="1.html">
-          Тема, мета, Місце розташування лабораторної роботи №4
+          Тема, мета, Місце розташування лабораторної роботи №6
         </a>
       </li>
       <li>
         <a href="2.html">
-          Планшетна верстка
+          Завдання 1
         </a>
       </li>
-      <li class="current-lab">
+      <li>
         <a href="3.html">
-          Мобільна верстка
+          Завдання 3
         </a>
       </li>
       <li>
         <a href="4.html">
+          Завдання 5
+        </a>
+      </li>
+      <li>
+        <a href="5.html">
+          Завдання 7
+        </a>
+      </li>
+      <li>
+        <a href="6.html">
+          Завдання 8
+        </a>
+      </li>
+      <li>
+        <a href="7.html">
+          Завдання 9
+        </a>
+      </li>
+      <li>
+        <a href="8.html">
+          Завдання 10
+        </a>
+      </li>
+      <li>
+        <a href="9.html">
           Висновки
         </a>
       </li>
@@ -83,71 +108,27 @@
 
   <div class="lab-report">
     <p>
-      Зменшив загальні відступи та проміжки, щоб ефективніше використовувати простір екрану.
+      Тема: КЛАСИ. ОБ'ЄКТНА МОДЕЛЬ ДОКУМЕНТА (DOM). ПОДІЇ. ОБ'ЄКТ ПОДІЇ.
+      ДЕЛЕГУВАННЯ ПОДІЙ. THROTTLE. МОДУЛЬНОСТЬ КОДУ
     </p>
     <p>
-      Зробив поля введення, текстові поля та кнопки на повну ширину екрану, щоб максимізувати зручність користувача.
+      Мета: придбати практичні навички роботи з об'єктами. Методи об'єкта..
+      Callback. Стрілочні функції. Стрілочні функції як колбеки.
+      Реалізація програм засовами мови JAVASCRIPT
     </p>
     <p>
-      Налаштував зображення так, щоб вони коректно масштабувалися і були реактивними до ширини пристрою.
+      <a href="https://github.com/Papsanly/WBF">Репозиторій проекту</a>
     </p>
-    <pre>
-@media (max-width: 768px) {
-  body {
-    gap: 1rem;
-  }
-
-  header, footer {
-    padding: 8px 0;
-  }
-
-  main {
-    padding: 0 10px;
-  }
-
-  .search-container, form {
-    flex-direction: column;
-  }
-
-  .search-container input, .search-container button, input, textarea, button {
-    width: 100%;
-  }
-
-  .items {
-    flex-direction: column;
-  }
-
-  .item {
-    flex-direction: column;
-  }
-
-  .item a {
-    flex-direction: column;
-  }
-
-  table, tbody {
-    display: block;
-    width: 100%;
-  }
-
-  th, td {
-    display: block;
-    width: 100%;
-    padding: 8px;
-  }
-
-  tr {
-    display: block;
-    margin-bottom: 10px;
-    width: 100%;
-  }
-
-  .item img {
-    width: 100%;
-    height: auto; /* Adjusts the height automatically based on the width */
-  }
-}
-    </pre>
+    <p>
+      <a href="../../app/index.html">Веб-застосунок</a>
+    </p>
+    <p>
+      <a href="../../cv/index.html">Резюме</a>
+    </p>
+    <p>
+      <a
+        href="https://www.figma.com/file/lGRWebOMgmhjkDmdr5F5dl/Figma-%D0%B4%D0%BB%D1%8F-%D0%BD%D0%BE%D0%B2%D0%B0%D1%87%D0%BA%D1%96%D0%B2?type=design&node-id=0%3A1&mode=design&t=XnvWkjYyCm4CpgK8-1">Figma</a>
+    </p>
   </div>
 
 </main>
