--- a/report/lab6/3.html
+++ b/report/lab6/3.html
@@ -34,7 +34,7 @@
           Лабораторна робота 3
         </a>
       </li>
-      <li class="current-lab">
+      <li>
         <a href="../lab4/1.html">
           Лабораторна робота 4
         </a>
@@ -49,7 +49,7 @@
           Лабораторна робота 5.1
         </a>
       </li>
-      <li>
+      <li class="current-lab">
         <a href="../lab6/1.html">
           Лабораторна робота 6
         </a>
@@ -60,21 +60,46 @@
     <ul class="lab-list">
       <li>
         <a href="1.html">
-          Тема, мета, Місце розташування лабораторної роботи №4
+          Тема, мета, Місце розташування лабораторної роботи №6
         </a>
       </li>
       <li>
         <a href="2.html">
-          Планшетна верстка
+          Завдання 1
         </a>
       </li>
       <li class="current-lab">
         <a href="3.html">
-          Мобільна верстка
+          Завдання 3
         </a>
       </li>
       <li>
         <a href="4.html">
+          Завдання 5
+        </a>
+      </li>
+      <li>
+        <a href="5.html">
+          Завдання 7
+        </a>
+      </li>
+      <li>
+        <a href="6.html">
+          Завдання 8
+        </a>
+      </li>
+      <li>
+        <a href="7.html">
+          Завдання 9
+        </a>
+      </li>
+      <li>
+        <a href="8.html">
+          Завдання 10
+        </a>
+      </li>
+      <li>
+        <a href="9.html">
           Висновки
         </a>
       </li>
@@ -82,73 +107,40 @@
   </div>
 
   <div class="lab-report">
+    <h1>ЗАВДАННЯ 3</h1>
     <p>
-      Зменшив загальні відступи та проміжки, щоб ефективніше використовувати простір екрану.
-    </p>
-    <p>
-      Зробив поля введення, текстові поля та кнопки на повну ширину екрану, щоб максимізувати зручність користувача.
-    </p>
-    <p>
-      Налаштував зображення так, щоб вони коректно масштабувалися і були реактивними до ширини пристрою.
+      <input type="text" id="passwordField" value="пароль"/>
+      <button onclick="togglePasswordVisibility()" id="toggleButton">Приховати</button>
     </p>
     <pre>
-@media (max-width: 768px) {
-  body {
-    gap: 1rem;
-  }
+function togglePasswordVisibility() {
+  const passwordField = document.getElementById('passwordField');
+  const toggleButton = document.getElementById('toggleButton');
 
-  header, footer {
-    padding: 8px 0;
-  }
-
-  main {
-    padding: 0 10px;
-  }
-
-  .search-container, form {
-    flex-direction: column;
-  }
-
-  .search-container input, .search-container button, input, textarea, button {
-    width: 100%;
-  }
-
-  .items {
-    flex-direction: column;
-  }
-
-  .item {
-    flex-direction: column;
-  }
-
-  .item a {
-    flex-direction: column;
-  }
-
-  table, tbody {
-    display: block;
-    width: 100%;
-  }
-
-  th, td {
-    display: block;
-    width: 100%;
-    padding: 8px;
-  }
-
-  tr {
-    display: block;
-    margin-bottom: 10px;
-    width: 100%;
-  }
-
-  .item img {
-    width: 100%;
-    height: auto; /* Adjusts the height automatically based on the width */
+  if (passwordField.type === 'password') {
+    passwordField.type = 'text';
+    toggleButton.textContent = 'Приховати';
+  } else {
+    passwordField.type = 'password';
+    toggleButton.textContent = 'Розкрити';
   }
 }
-    </pre>
+  </pre>
   </div>
+  <script>
+    function togglePasswordVisibility() {
+      const passwordField = document.getElementById('passwordField')
+      const toggleButton = document.getElementById('toggleButton')
+
+      if (passwordField.type === 'password') {
+        passwordField.type = 'text'
+        toggleButton.textContent = 'Приховати'
+      } else {
+        passwordField.type = 'password'
+        toggleButton.textContent = 'Розкрити'
+      }
+    }
+  </script>
 
 </main>
 </body>
