--- a/report/lab5.1/6.html
+++ b/report/lab5.1/6.html
@@ -34,7 +34,7 @@
           Лабораторна робота 3
         </a>
       </li>
-      <li class="current-lab">
+      <li>
         <a href="../lab4/1.html">
           Лабораторна робота 4
         </a>
@@ -44,7 +44,7 @@
           Лабораторна робота 5.0
         </a>
       </li>
-      <li>
+      <li class="current-lab">
         <a href="../lab5.1/1.html">
           Лабораторна робота 5.1
         </a>
@@ -60,21 +60,41 @@
     <ul class="lab-list">
       <li>
         <a href="1.html">
-          Тема, мета, Місце розташування лабораторної роботи №4
+          Тема, мета, Місце розташування лабораторної роботи №5
         </a>
       </li>
       <li>
         <a href="2.html">
-          Планшетна верстка
+          Завдання 1
         </a>
       </li>
-      <li class="current-lab">
+      <li>
         <a href="3.html">
-          Мобільна верстка
+          Завдання 3
         </a>
       </li>
       <li>
         <a href="4.html">
+          Завдання 5
+        </a>
+      </li>
+      <li>
+        <a href="5.html">
+          Завдання 7
+        </a>
+      </li>
+      <li class="current-lab">
+        <a href="6.html">
+          Завдання 9
+        </a>
+      </li>
+      <li>
+        <a href="7.html">
+          Завдання 10
+        </a>
+      </li>
+      <li>
+        <a href="8.html">
           Висновки
         </a>
       </li>
@@ -83,73 +103,49 @@
 
   <div class="lab-report">
     <p>
-      Зменшив загальні відступи та проміжки, щоб ефективніше використовувати простір екрану.
-    </p>
-    <p>
-      Зробив поля введення, текстові поля та кнопки на повну ширину екрану, щоб максимізувати зручність користувача.
-    </p>
-    <p>
-      Налаштував зображення так, щоб вони коректно масштабувалися і були реактивними до ширини пристрою.
+      <button onclick="logTagCounts()">Log Tag Counts</button>
     </p>
     <pre>
-@media (max-width: 768px) {
-  body {
-    gap: 1rem;
-  }
+function logTagCounts() {
+  const tweets = [
+    { id: "000", likes: 5, tags: ["js", "nodejs"] },
+    { id: "001", likes: 2, tags: ["html", "css"] },
+    { id: "002", likes: 17, tags: ["html", "js", "nodejs"] },
+    { id: "003", likes: 8, tags: ["css", "react"] },
+    { id: "004", likes: 0, tags: ["js", "nodejs", "react"] },
+  ];
 
-  header, footer {
-    padding: 8px 0;
-  }
+  const tagCounts = tweets.reduce((acc, tweet) => {
+    tweet.tags.forEach(tag => {
+      acc[tag] = (acc[tag] || 0) + 1;
+    });
+    return acc;
+  }, {});
 
-  main {
-    padding: 0 10px;
-  }
-
-  .search-container, form {
-    flex-direction: column;
-  }
-
-  .search-container input, .search-container button, input, textarea, button {
-    width: 100%;
-  }
-
-  .items {
-    flex-direction: column;
-  }
-
-  .item {
-    flex-direction: column;
-  }
-
-  .item a {
-    flex-direction: column;
-  }
-
-  table, tbody {
-    display: block;
-    width: 100%;
-  }
-
-  th, td {
-    display: block;
-    width: 100%;
-    padding: 8px;
-  }
-
-  tr {
-    display: block;
-    margin-bottom: 10px;
-    width: 100%;
-  }
-
-  .item img {
-    width: 100%;
-    height: auto; /* Adjusts the height automatically based on the width */
-  }
+  console.log(tagCounts);
 }
-    </pre>
+  </pre>
   </div>
+  <script>
+    function logTagCounts() {
+      const tweets = [
+        {id: '000', likes: 5, tags: ['js', 'nodejs']},
+        {id: '001', likes: 2, tags: ['html', 'css']},
+        {id: '002', likes: 17, tags: ['html', 'js', 'nodejs']},
+        {id: '003', likes: 8, tags: ['css', 'react']},
+        {id: '004', likes: 0, tags: ['js', 'nodejs', 'react']},
+      ]
 
+      const tagCounts = tweets.reduce((acc, tweet) => {
+        tweet.tags.forEach(tag => {
+          acc[tag] = (acc[tag] || 0) + 1
+        })
+        return acc
+      }, {})
+
+      console.log(tagCounts)
+    }
+  </script>
 </main>
 </body>
 </html>
