--- a/report/lab3/4.html
+++ b/report/lab3/4.html
@@ -105,6 +105,11 @@
           Лабораторна робота 6
         </a>
       </li>
+      <li>
+        <a href="../lab7/1.html">
+          Лабораторна робота 7
+        </a>
+      </li>
     </ul>
   </div>
   <div>
