--- a/report/lab3/6.html
+++ b/report/lab3/6.html
@@ -102,6 +102,11 @@
           Лабораторна робота 7
         </a>
       </li>
+      <li>
+        <a href="../lab8/1.html">
+          Лабораторна робота 8
+        </a>
+      </li>
     </ul>
   </div>
   <div>
