--- a/report/lab4/2.html
+++ b/report/lab4/2.html
@@ -59,6 +59,11 @@
           Лабораторна робота 7
         </a>
       </li>
+      <li>
+        <a href="../lab8/1.html">
+          Лабораторна робота 7
+        </a>
+      </li>
     </ul>
   </div>
   <div>
