add links to lab 8

--- a/report/lab8/5.html
+++ b/report/lab8/5.html
@@ -73,7 +73,7 @@
           Тиждень 1
         </a>
       </li>
-      <li class="current-lab">
+      <li>
         <a href="2.html">
           Тиждень 2
         </a>
@@ -88,7 +88,7 @@
           Тиждень 4
         </a>
       </li>
-      <li>
+      <li class="current-lab">
         <a href="5.html">
           Посилання
         </a>
@@ -97,30 +97,9 @@
   </div>
 
   <div class="lab-report">
-    <h2>Тести</h2>
-    <img src="2/img.png" alt="img.png">
-    <img src="2/img_1.png" alt="img.png">
-    <img src="2/img_2.png" alt="img.png">
-    <img src="2/img_3.png" alt="img.png">
-    <img src="2/img_4.png" alt="img.png">
-    <img src="2/img_5.png" alt="img.png">
-    <img src="2/img_6.png" alt="img.png">
-    <img src="2/img_7.png" alt="img.png">
-    <img src="2/img_8.png" alt="img.png">
-    <img src="2/img_9.png" alt="img.png">
-    <img src="2/img_10.png" alt="img.png">
-    <img src="2/img_11.png" alt="img.png">
-    <img src="2/img_12.png" alt="img.png">
-    <img src="2/img_13.png" alt="img.png">
-    <img src="2/img_14.png" alt="img.png">
-    <img src="2/img_15.png" alt="img.png">
-    <h2>Лабораторні роботи</h2>
-    <img src="2/photo_2024-05-28_20-24-02.jpg" alt="photo_2024-05-28_20-24-02.jpg">
-    <img src="2/photo_2024-05-28_20-25-49.jpg" alt="photo_2024-05-28_20-25-49.jpg">
-    <img src="2/photo_2024-05-28_20-25-56.jpg" alt="photo_2024-05-28_20-25-56.jpg">
-    <img src="2/photo_2024-05-28_20-26-03.jpg" alt="photo_2024-05-28_20-26-03.jpg">
+    <p><a href="https://github.com/Papsanly/react_course">Репозиторій з практиками</a></p>
+    <p><a href="/">Сертифікат</a></p>
   </div>
-
 </main>
 </body>
 </html>
