--- a/report/lab8/4.html
+++ b/report/lab8/4.html
@@ -88,6 +88,11 @@
           Тиждень 4
         </a>
       </li>
+      <li>
+        <a href="5.html">
+          Посилання
+        </a>
+      </li>
     </ul>
   </div>
 
