add certificate to lab 8

--- a/report/lab8/5.html
+++ b/report/lab8/5.html
@@ -90,7 +90,7 @@
       </li>
       <li class="current-lab">
         <a href="5.html">
-          Посилання
+          Посилання та сертифікат
         </a>
       </li>
     </ul>
@@ -98,7 +98,8 @@
 
   <div class="lab-report">
     <p><a href="https://github.com/Papsanly/react_course">Репозиторій з практиками</a></p>
-    <p><a href="/">Сертифікат</a></p>
+    <p><a href="https://coursera.org/share/f1db590aedfba3bdb8b3f492aafae15a">Сертифікат</a></p>
+    <img src="img.png" alt="img">
   </div>
 </main>
 </body>
