--- a/report/lab8/1.html
+++ b/report/lab8/1.html
@@ -90,7 +90,7 @@
       </li>
       <li>
         <a href="5.html">
-          Посилання
+          Посилання та сертифікат
         </a>
       </li>
     </ul>
